@@ -332,3 +332,5 @@
 20031103 rzx.c: add Win32 timing routines (Marek).
 20031103 fuse.c: add Win32 uname-like routines (Marek).
 20031105 configure.in: explicitly link in zlib if using libpng.
+20031105 event.[ch], z80/z80.[ch], z80/z80.pl: prevent interrupts from
+	 being accepted immediately after an EI.
